--- a/Source/design.css
+++ b/Source/design.css
@@ -1,9 +1,9 @@
-/* Include the padding and border in an element's total width and height */
 * {
     box-sizing: border-box;
+    font-family: Finlandica;
   }
   
-  /* Remove margins and padding from the list */
+  /* Unordered List style */
   ul {
     margin: 0;
     padding: 0;
@@ -14,7 +14,7 @@
     cursor: pointer;
     position: relative;
     padding: 12px 8px 12px 40px;
-    background: #eee;
+    background: rgb(178, 178, 178);
     font-size: 18px;
     transition: 0.2s;
   
@@ -27,12 +27,12 @@
   
   /* Set all odd list items to a different color (zebra-stripes) */
   ul li:nth-child(odd) {
-    background: #f9f9f9;
+    background: #ffe4e4;
   }
   
   /* Darker background-color on hover */
   ul li:hover {
-    background: #ddd;
+    background: rgb(221, 175, 175);
   }
   
   /* When clicked on, add a background color and strike out text */
@@ -55,25 +55,11 @@
     height: 15px;
     width: 7px;
   }
-  
-  /* Style the close button */
-  .close {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 12px 16px 12px 16px;
-  }
-  
-  .close:hover {
-    background-color: #f44336;
-    color: white;
-  }
-  
-  /* Style the header */
+
   .header {
-    background-color: #f44336;
+    background-color: #085014;
     padding: 30px 40px;
-    color: white;
+    color: rgb(214, 214, 214);
     text-align: center;
   }
   
@@ -83,32 +69,63 @@
     display: table;
     clear: both;
   }
+
+  /* Every span proceeded by a span (Every span except first) will have margin*/
+  span + span{
+    margin-left: 15px;
+  }
   
-  /* Style the input */
+  /* Input bar style*/
   input {
     margin: 0;
     border: none;
     border-radius: 0;
-    width: 75%;
+    width: 70%;
     padding: 10px;
     float: left;
     font-size: 16px;
   }
-  
-  /* Style the "Add" button */
-  .addBtn {
+
+  /* Add Item Button style*/
+  .add-todo-button {
     padding: 10px;
-    width: 25%;
-    background: #d9d9d9;
-    color: #555;
+    width: 15%;
+    background: #aeaeae;
+    color: rgb(67, 67, 67);
     float: left;
     text-align: center;
     font-size: 16px;
     cursor: pointer;
-    transition: 0.3s;
     border-radius: 0;
+    /* Transition smoothly over time */
+    transition: opacity 0.2s;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
   }
-  
-  .addBtn:hover {
-    background-color: #bbb;
+  /* While hovered over...*/
+  .add-todo-button:hover {
+    background-color: rgb(127, 127, 127);
+  }
+  /* When clicked on...*/
+  .add-todo-button:active {
+    opacity: 0.8;
+  }
+
+  /* Close Button style*/
+  .closeElement {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+    /* Transition smoothly over time */
+    transition: opacity 0.2s;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
+  }
+  /* While hovered over...*/
+  .closeElement:hover {
+    background-color: #a9160b;
+    color: white;
+  }
+  /* When clicked on...*/
+  .closeElement:active {
+    opacity: 0.8;
   }
